# OS

LAB1 Libraries/Number/: Number.sln
LAB1 Libraries/Number/Debug/: Number.lib
LAB1 Libraries/Number/Number/: Number.h  Number.vcxproj
LAB1 Libraries/Number/Number/Debug/: Number.idb  Number.vcxproj.FileListAbsolute.txt
LAB1 Libraries/Number/Number/Debug/Number.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Number.lastbuildstate
LAB1 Libraries/TestLibraries/: TestLibraries.sln
LAB1 Libraries/TestLibraries/Debug/: TestLibraries.ilk
LAB1 Libraries/TestLibraries/TestLibraries/: Test.cpp  TestLibraries.vcxproj
LAB1 Libraries/TestLibraries/TestLibraries/Debug/: TestLibraries.exe.recipe  vc142.idb
LAB1 Libraries/TestLibraries/TestLibraries/Debug/TestLibraries.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestLibraries.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LAB1 Libraries/Vector/: Vector.sln
LAB1 Libraries/Vector/Debug/: Vector.exp  Vector.ilk  Vector.lib
LAB1 Libraries/Vector/Vector/: Vector.cpp  Vector.h  Vector.vcxproj
LAB1 Libraries/Vector/Vector/Debug/: Vector.dll.recipe  vc142.idb
LAB1 Libraries/Vector/Vector/Debug/Vector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vector.lastbuildstate  Vector.write.1u.tlog  link.command.1.tlog  (+2 more)
LAB2 Libraries/Number/: CMakeLists.txt  Number.h
LAB2 Libraries/Vector/: CMakeLists.txt  Vector.cpp  Vector.h
LAB2 Libraries/testLibraries/: CMakeLists.txt  main.cpp
